@@ -1,8 +1,8 @@
 package hirs.utils.rim.unsignedRim.cbor.ietfCoswid;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.cbor.CBORFactory;
-import com.fasterxml.jackson.databind.JsonNode;
 import hirs.utils.rim.unsignedRim.common.IanaHashAlg;
 import hirs.utils.rim.unsignedRim.common.measurement.Measurement;
 import hirs.utils.rim.unsignedRim.common.measurement.MeasurementType;
@@ -17,9 +17,9 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HexFormat;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 
 import static hirs.utils.rim.unsignedRim.cbor.ietfCoswid.CoswidItems.FS_NAME_INT;
@@ -33,30 +33,35 @@ import static hirs.utils.rim.unsignedRim.cbor.ietfCoswid.CoswidItems.FS_NAME_INT
  * </p>
  */
 @NoArgsConstructor
-public class CoswidParser   {
-    protected Map<String, Object> parsedData = null;
-    protected JsonNode rootNode = null;
-    /** Coswid object. */
+public class CoswidParser {
+    private static final Logger LOGGER = LogManager.getLogger(CoswidParser.class);
+    private static final int COSWID_MAP = 0;
+    private static final int ENTITY_MAP = CoswidItems.ENTITY_INT;
+    private final List<String> path = new ArrayList<>();
+    /**
+     * Coswid object.
+     */
     @Getter
     public Coswid coswid = new Coswid();
-    /** Tag found on the coswid data. */
+    /**
+     * Tag found on the coswid data.
+     */
     @Setter
     @Getter
     public int coswidTag = 0;
+    protected Map<String, Object> parsedData = null;
+    protected JsonNode rootNode = null;
     private String nonpayloadParsedDataOneline = "";
     private String nonpayloadParsedDataPretty = "";
     private String payloadParsedDataOneline = "";
     private String payloadParsedDataPretty = "";
-    private List<String> path = new ArrayList<>();
-    private static int coswidMap = 0;
-    private static int entityMap =  CoswidItems.ENTITY_INT;
-    private static final Logger LOGGER = LogManager.getLogger(CoswidParser.class);
 
     /**
      * Constructor for a CoSWID parser that takes a byte array of CBOR-encoded CoSWID object
-     *   and populates associated member variables.
-     * @param cborData    CBOR-encoded byte array
-     * @throws IOException  for decoding errors
+     * and populates associated member variables.
+     *
+     * @param cborData CBOR-encoded byte array
+     * @throws IOException for decoding errors
      */
     public CoswidParser(final byte[] cborData) throws IOException {
         CborTagProcessor tparse = new CborTagProcessor(cborData);
@@ -77,6 +82,7 @@ public class CoswidParser   {
     /**
      * Parses a byte array of a CBOR-encoded CoSWID object and populates associated member variables.
      * While parsing, populates a String variable with items from the CoSWID.
+     *
      * @param cborData the cbor byte string to process
      */
     protected void initParser(final byte[] cborData) {
@@ -94,15 +100,15 @@ public class CoswidParser   {
                 coswid.setTagId(tag);
             }
             buildString(CoswidItems.TAG_ID_INT, coswid.getTagId());
-            coswid.setSoftwareName(parseString(coswidMap, CoswidItems.SOFTWARE_NAME_INT));
-            coswid.setCorpus(parseBoolean(coswidMap, CoswidItems.CORPUS_INT));
-            coswid.setPatch(parseBoolean(coswidMap, CoswidItems.PATCH_INT));
-            coswid.setSupplemental(parseBoolean(coswidMap, CoswidItems.SUPPLEMENTAL_INT));
-            coswid.setTagVersion(parseString(coswidMap, CoswidItems.TAG_VERSION_INT));
-            coswid.setSoftwareVersion(parseString(coswidMap, CoswidItems.SOFTWARE_VERSION_INT));
+            coswid.setSoftwareName(parseString(COSWID_MAP, CoswidItems.SOFTWARE_NAME_INT));
+            coswid.setCorpus(parseBoolean(COSWID_MAP, CoswidItems.CORPUS_INT));
+            coswid.setPatch(parseBoolean(COSWID_MAP, CoswidItems.PATCH_INT));
+            coswid.setSupplemental(parseBoolean(COSWID_MAP, CoswidItems.SUPPLEMENTAL_INT));
+            coswid.setTagVersion(parseString(COSWID_MAP, CoswidItems.TAG_VERSION_INT));
+            coswid.setSoftwareVersion(parseString(COSWID_MAP, CoswidItems.SOFTWARE_VERSION_INT));
 
             // global-attributes group
-            String lang = parseString(coswidMap, CoswidItems.LANG_INT);
+            String lang = parseString(COSWID_MAP, CoswidItems.LANG_INT);
             if (!lang.isEmpty()) {
                 nonpayloadParsedDataOneline += " global-attributes => ";
                 nonpayloadParsedDataPretty += "global-attributes :\n";
@@ -112,8 +118,8 @@ public class CoswidParser   {
             // entity-entry map
             nonpayloadParsedDataOneline += " entity => ";
             nonpayloadParsedDataPretty += "entity :\n";
-            coswid.setEntityName(parseString(entityMap, CoswidItems.ENTITY_NAME_INT));
-            coswid.setRegId(parseString(entityMap, CoswidItems.REG_ID_INT));
+            coswid.setEntityName(parseString(ENTITY_MAP, CoswidItems.ENTITY_NAME_INT));
+            coswid.setRegId(parseString(ENTITY_MAP, CoswidItems.REG_ID_INT));
             JsonNode roleNode = rootNode.path(Integer.toString(CoswidItems.ENTITY_INT))
                     .path(Integer.toString(CoswidItems.ROLE_INT));
             processRole(roleNode);
@@ -165,6 +171,7 @@ public class CoswidParser   {
     /**
      * Processes a role as published in rfc 9393 Section 2.6. "The entity-entry Map".
      * This lookup is specific for roles defined in section 2.6.
+     *
      * @param node JsonNode that holds the array value
      */
     private void processRole(final JsonNode node) {
@@ -174,7 +181,7 @@ public class CoswidParser   {
             nonpayloadParsedDataPretty += "         role(s):\n";
             String value = "";
             int key = 0;
-            int i  = 0;
+            int i = 0;
 
             if (node.isArray()) {
                 for (i = 0; i < node.size(); i++) {
@@ -197,8 +204,9 @@ public class CoswidParser   {
 
     /**
      * Uses the indexes to convert the integer key into the text values published in
-     *    rfc 9393 Section 2.6. "The entity-entry Map".
+     * rfc 9393 Section 2.6. "The entity-entry Map".
      * This lookup is specific for roles defined in section 2.6.
+     *
      * @param index The index value defined in RFC-9393 for roles
      * @return String holding the human-readable role
      */
@@ -216,6 +224,7 @@ public class CoswidParser   {
 
     /**
      * Process the payload map.
+     *
      * @param node JsonNode that holds the payload node
      */
     private void processPayload(final JsonNode node) {
@@ -223,10 +232,9 @@ public class CoswidParser   {
         String index = "";
         int key = 0;
         int i = 0;
-        Iterator<Map.Entry<String, JsonNode>> fields = node.fields();
+        Set<Map.Entry<String, JsonNode>> fields = node.properties();
 
-        while (fields.hasNext()) {
-            Map.Entry<String, JsonNode> field = fields.next();
+        for (Map.Entry<String, JsonNode> field : fields) {
             key = Integer.parseInt(field.getKey());
             index = CoswidItems.getItemName(key);
 
@@ -252,16 +260,17 @@ public class CoswidParser   {
                 }
             } else if (index.compareTo("size") == 0) {
                 payloadParsedDataOneline += " " + index + " => " + field.getValue().asText();
-                payloadParsedDataPretty += "         "  + index + " : " + field.getValue().asText() +  "\n";
+                payloadParsedDataPretty += "         " + index + " : " + field.getValue().asText() + "\n";
             } else {
                 payloadParsedDataOneline += " " + index + " => " + field.getValue();
-                payloadParsedDataPretty += "         "  + index + " : " + field.getValue() + "\n";
+                payloadParsedDataPretty += "         " + index + " : " + field.getValue() + "\n";
             }
         }
     }
 
     /**
      * Process a file from a Json array.
+     *
      * @param directoryNode JsonNode that holds the file node
      */
     private void processPayloadDirectory(final JsonNode directoryNode) {
@@ -270,9 +279,14 @@ public class CoswidParser   {
         payloadParsedDataPretty += "     directory" + " : \n";
 
         // temporarily peek ahead to grab the directory name and add it to the current path
-        if (directoryNode.fields().hasNext()
-                && Integer.parseInt(directoryNode.fields().next().getKey()) == FS_NAME_INT) {
-            path.add(directoryNode.fields().next().getValue().asText());
+        Set<Map.Entry<String, JsonNode>> properties = directoryNode.properties();
+        if (!properties.isEmpty()) {
+            Map.Entry<String, JsonNode> firstEntry = properties.iterator().next();
+            if (Integer.parseInt(firstEntry.getKey()) == FS_NAME_INT) {
+                path.add(firstEntry.getValue().asText());
+            } else {
+                path.add("Unknown_directory_name");
+            }
         } else {
             path.add("Unknown_directory_name");
         }
@@ -281,11 +295,12 @@ public class CoswidParser   {
         processPayload(directoryNode);
 
         // when leaving the directory, remove its name from the current path
-        path.remove(path.size() - 1);
+        path.removeLast();
     }
 
     /**
      * Process a file from a Json array.
+     *
      * @param fileNode JsonNode that holds the file node
      */
     private void processPayloadFile(final JsonNode fileNode) {
@@ -295,15 +310,15 @@ public class CoswidParser   {
         String index = "";
         String filepath = "";
         int key = 0;
-        Iterator<Map.Entry<String, JsonNode>> fields = fileNode.fields();
+        Set<Map.Entry<String, JsonNode>> fields = fileNode.properties();
         Measurement measurement = new Measurement();
 
         // process the measurement type
         measurement.setMeasurementType(MeasurementType.UNKNOWN);
 
         // iterate through each item belonging to this file (name, size, hash, etc)
-        while (fields.hasNext()) {
-            Map.Entry<String, JsonNode> field = fields.next();
+
+        for (Map.Entry<String, JsonNode> field : fields) {
             key = Integer.parseInt(field.getKey());
             index = CoswidItems.getItemName(key);
             measurement.setRevision(coswid.getRevision());
@@ -315,20 +330,20 @@ public class CoswidParser   {
             } else {
                 switch (index) {
                     case CoswidItems.FS_NAME_STR:
-                        for (String eachDirectory: path) {
+                        for (String eachDirectory : path) {
                             filepath += eachDirectory + "\\";
                         }
                         filepath += field.getValue().asText();
                         measurement.setAdditionalMetadata("    File path: " + filepath + "\n");
                         break;
-                    case CoswidItems.SIZE_STR: break;
-                    case CoswidItems.FILE_VERSION_STR: break;
+                    case CoswidItems.SIZE_STR, CoswidItems.FILE_VERSION_STR:
+                        break;
                     default:
                         throw new RuntimeException("Error processing Coswid data: "
                                 + "Unknown Payload item (" + index + ")");
                 }
                 payloadParsedDataOneline += " " + index + " => " + field.getValue();
-                payloadParsedDataPretty += "         "  + index + " : " + field.getValue() + "\n";
+                payloadParsedDataPretty += "         " + index + " : " + field.getValue() + "\n";
             }
         }
         coswid.measurements.add(measurement);
@@ -336,12 +351,13 @@ public class CoswidParser   {
 
     /**
      * Processes a hash-entry as published in rfc 9393 Section 2.9.1 "The hash-entry array".
+     *
      * @param node JsonNode that holds the array value
      * @return returns a byte array with the measurement hash
      */
     private Object[] processPayloadHash(final JsonNode node) {
 
-        HexFormat hexTool =  HexFormat.of();
+        HexFormat hexTool = HexFormat.of();
 
         String hash = "";
         String algStr = "";
@@ -364,12 +380,13 @@ public class CoswidParser   {
         payloadParsedDataPretty += "         Hash algorithm : " + algStr
                 + "\n         Hash => " + hash + "\n";
 
-        return new Object[]{algInt, hashBytes};
+        return new Object[] {algInt, hashBytes};
     }
 
     /**
      * During initial parsing of the CoSWID, builds a string that contains the processed CoSWID data.
-     * @param key integer value that corresponds to the key in the key/value pair of the CoSWID map
+     *
+     * @param key  integer value that corresponds to the key in the key/value pair of the CoSWID map
      * @param item item that corresponds to the value in the key/value pair of the CoSWID map
      */
     private void buildString(final int key, final String item) {
@@ -385,6 +402,7 @@ public class CoswidParser   {
      * by parsing the first byte of the payload as a tag
      * and checking for one of the supported tags by this application.
      * If a supported tag is found the payload and coswidTag references are adjusted.
+     *
      * @param coswidData byte array holding the raw coswid data to process
      * @return true if a valid tag is found
      */
@@ -400,15 +418,16 @@ public class CoswidParser   {
     /**
      * Parses an item from the coswid data referenced by the Coswid item number.
      * Also updates the toString() data.
-     * @param map Cowid defined item number
-     * @param coswidItem  coswid item defined by rfc 9393
+     *
+     * @param map        Cowid defined item number
+     * @param coswidItem coswid item defined by rfc 9393
      * @return String obtained from the coswid data
      */
     private String parseString(final int map, final int coswidItem) {
         String itemString = Integer.toString(coswidItem);
         String mapString = Integer.toString(map);
         String referenceVal = "";
-        if (map == coswidMap) {
+        if (map == COSWID_MAP) {
             referenceVal = rootNode.path(itemString).asText();
         } else {
             referenceVal = rootNode.path(mapString).path(itemString).asText();
@@ -416,18 +435,20 @@ public class CoswidParser   {
         buildString(coswidItem, referenceVal);
         return referenceVal;
     }
+
     /**
      * Parses a boolean from the coswid data referenced by the Coswid item number.
      * Also updates the toString() data.
-     * @param map Cowid defined item number
-     * @param coswidItem  coswid item defined by rfc 9393
+     *
+     * @param map        Cowid defined item number
+     * @param coswidItem coswid item defined by rfc 9393
      * @return boolean obtained from the coswid data
      */
     private boolean parseBoolean(final int map, final int coswidItem) {
         String itemString = Integer.toString(coswidItem);
         String mapString = Integer.toString(map);
         boolean referenceVal = false;
-        if (map == coswidMap) {
+        if (map == COSWID_MAP) {
             referenceVal = rootNode.path(itemString).asBoolean(false);
         } else {
             referenceVal = rootNode.path(mapString).path(itemString).asBoolean(false);
@@ -435,8 +456,10 @@ public class CoswidParser   {
         buildString(coswidItem, Boolean.toString(referenceVal));
         return referenceVal;
     }
+
     /**
      * Default toString that contains all key/value pairs in the CoSWID data with no line breaks.
+     *
      * @return the CoSWID data in a string with no line breaks
      */
     public String toString() {
@@ -445,6 +468,7 @@ public class CoswidParser   {
 
     /**
      * Prints the processed CoSWID data that was stored when initially parsed.
+     *
      * @param format options: "pretty" (default is anything else)
      * @return the CoSWID data in a string
      */
